@@ -1,5 +1,10 @@
 2009-01-03  Philip Withnall  <philip@tecnocode.co.uk>
 
+	* src/plugins/opensubtitles/opensubtitles.ui: UI and string cleanups
+	for the OpenSubtitles plugin. (Closes: #566134)
+
+2009-01-03  Philip Withnall  <philip@tecnocode.co.uk>
+
 	* src/plugins/jamendo/Makefile.am:
 	* src/plugins/jamendo/jamendo.glade:
 	* src/plugins/jamendo/jamendo.py: Convert the Jamendo plugin to
